# Gazebo-test

./: README.md
Models/my_robot/: model.config  model.sdf
devel/: .catkin
generating random boxes/: CMakeLists.txt  hello.world  main.cpp  random_generator  random_generator.cc
generating random boxes/Models/Hello/: model.config
logs/catkin_tools_prebuild/: build.cmake.000.log.stderr
plugin_tutorial/: CMakeLists.txt
src/: ModelGenerator.py
